@@ -8,16 +8,19 @@ AUX python-config-2.4-r1 1624 RMD160 e4e6893c9e8414289c0c70c0f4be58835911e376 SH
 DIST Python-2.4.6.tar.bz2 8154677 RMD160 0687989193dec2ac108142759281be7ddcf7f31e SHA1 cb1972a554a458f6a26d3e047b359251865d7c96 SHA256 da104139ad3f4534482942ac02cf8f8ed9badd370ffa14f06b07c44914423e08
 DIST Python-2.5.4.tar.bz2 9821313 RMD160 3a76c83464c3b1c38a60351ab054e33ac7195663 SHA1 0f2e819d6381f72f26c734e00a6780b3933ea404 SHA256 bc8d896a2bfe5523ba93b8d89b71017b74e8e6cb21dc676a0ccff668c8780110
 DIST Python-2.6.4.tar.bz2 11249486 RMD160 fd33853842110fa3636dd296f2f27646fd2b151a SHA1 bee572680d1966501247cb2b26e0e51f94d1cd13 SHA256 dad8d5575144a210d5cc4fdbc40b8a26386e9cdb1ef58941bec0be02c7cb9d89
+DIST Python-2.6.5.tar.bz2 11095581 RMD160 909c6a13749396f2b19fed51821d3e2577b2833b SHA1 24c94f5428a8c94c9d0b316e3019fee721fdb5d1 SHA256 62da62eb685621ede2be1275f11b89fa0e0be578db8daa5320d0a7855c0a9ebc
 DIST Python-3.1.1.tar.bz2 9757032 RMD160 d60b64e1346b2ff15d65b032ea35fb3ad8b0dc66 SHA1 42eb37bf75fae5731f6df1b195902960ae1789e0 SHA256 d87cc2578abade3ac1124b2b8e63146b1201726279d44cdde37fdd59553b51fd
 DIST python-gentoo-patches-2.4.6.tar.bz2 10983 RMD160 c06dc76edec86d708a0c0e37126ae50f49f61bd3 SHA1 bbc04083fe74cff8c723c5c3cab70b1b814c987f SHA256 0508a66408f218c655823303833599344d2edeec1ffc683c6ada3fc33731590d
 DIST python-gentoo-patches-2.5.4-r3.tar.bz2 19473 RMD160 c3a807693103f9e26c3cce4add5a1f3d975ef216 SHA1 c6170894865ee8aac8c813916c21a0d0458691bc SHA256 03f5bdb0a4ac8eb498a90c5cd444a5c76ed7e79bff5e8dca00efe77cf80c6391
 DIST python-gentoo-patches-2.6.4-r1.tar.bz2 12570 RMD160 2a58eb651ce5adc68c4667fb0ddc42cc215ea342 SHA1 c5de0442890bc0753c445a88390d932e629c8648 SHA256 2fe6c8838df2c07d3232ebb26c128dab2787c43a76ddb0b55acec1bed657f9f2
 DIST python-gentoo-patches-2.6.4.tar.bz2 11032 RMD160 83903892ef18880f876e7a140c803c1e8a67e24b SHA1 51d4174b2a4136a11c64ae0007b59e4c2f0e13f2 SHA256 19a66a0855df270c030438f21c29260e7ff69b299830409f6aa9140611b721e2
+DIST python-gentoo-patches-2.6.5.tar.bz2 14459 RMD160 576a4f1ddf4a7927f9424863d9ea09e8acb53c5d SHA1 db59d5a3ce3ef1fb0001e05c61e713b72d3dedd4 SHA256 a0055cd62d788bb28b16912825c13bd951c039d73ca4dc8439c175b4121dab2f
 DIST python-gentoo-patches-3.1.1-r4.tar.bz2 10200 RMD160 418852c54bf7169eb7bab078e78997e22799139e SHA1 0c063cd446a22833e267710f59351cb157098b21 SHA256 c065659242df3e921290ff044aee6f543c8b5cd2290db5bf668065cf97fcbbbe
 EBUILD python-2.4.6.ebuild 8966 RMD160 d48e302f289834896434b38113d1d98e7c0a4dbd SHA1 08004c836e1fa10401689ae2455b3790503ae0fc SHA256 f26f980b2d3697e8842dd36ca06b44f7eba921bca06b2388d8621d95065fcfc2
 EBUILD python-2.5.4-r4.ebuild 9306 RMD160 c11c7d75f4298228e5f1164b7315fb8d00294833 SHA1 36bae88672be35eb877f9b3ad0b1fd5dbf491a48 SHA256 30c8f1f29d2af9565e9b97f1ec266bf1aff283018f882ee9dbfbe02e175e48a2
 EBUILD python-2.6.4-r1.ebuild 9559 RMD160 99a85580a38955be98e2217dc65cb48d84082080 SHA1 d9620d4205f605d38d4058416b93f997b4313578 SHA256 3b968bae7990af61dc74a1c98c60f60e0fd711a444bdfbfd43dfe165688e3fc2
 EBUILD python-2.6.4.ebuild 9491 RMD160 a297ff0934fd2df2aca38db02fb21e8c8e839772 SHA1 3eaced72f6b57c5978c925223d27adb4ea82a0e4 SHA256 97ebe170095882d2dc1eb6d723b771787d2c3cabf2ec30ce3d8ae8138b4df054
+EBUILD python-2.6.5.ebuild 9228 RMD160 56cc6132679484b59d66697b8da9c10f45e2cb5f SHA1 f940c941eaff088606afd674b986771c33e3666c SHA256 4cf80e0d6e2afb209618f06b33eb1de1604a68c91339a8e5170b43a369b71019
 EBUILD python-3.1.1-r1.ebuild 9134 RMD160 7ff62378f1c80f92ec9ca3c8106558e2705a9987 SHA1 ddb6cfa8e905c24f85afc6efff5168187523443d SHA256 e5ab994e0a2fa74e8c801fe629773c81ec50ec2d6316eac1d899ee88c8ec71f1
-MISC ChangeLog 80637 RMD160 e233a2d508b271a8576b672968ef4a092db7906c SHA1 0841ef3f62ff5ba8959bcd5f56013d139cbb5bc8 SHA256 87d281724c9d4d0c1a1601db6c6aa24fb3d605b99b49bd364cef0b12022def85
+MISC ChangeLog 80973 RMD160 9c62d833c72cfeba06a2aa73faa759126b1a436e SHA1 2f8ce8d287682ee6b3f9b4da19a8383355c2d094 SHA256 20dffd6b2cf1483f3b4c59fd57a85fff0ccb92d65f2f2c979526fb0097d1cb09
 MISC metadata.xml 661 RMD160 54831d16b8807086bfabdbb3df9d33336b5d42a0 SHA1 9867c337fe9e6f4e967004fc9409763e0fedf43b SHA256 2c6c3407251f7ccd6501dee49494e539a9544f2fbae99a4373eefdf4e83e8908
